widget_derive/tests/ui/declare/skip_nc_fail.stderr
error: Unnecessary attribute, because not depends on any others
 --> $DIR/skip_nc_fail.rs:7:7
  |
7 |       #[skip_nc]
  |       ^^^^^^^^^^
  |
  = help: Try to remove it.

error: Unnecessary attribute, because not depends on any others
  --> $DIR/skip_nc_fail.rs:18:7
   |
18 |       #[skip_nc]
   |       ^^^^^^^^^^
   |
   = help: Try to remove it.

error: Unnecessary attribute, because not depends on any others
  --> $DIR/skip_nc_fail.rs:29:7
   |
29 |       #[skip_nc]
   |       ^^^^^^^^^^
   |
   = help: Try to remove it.
